cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otterscan
  namespace: otterscan
  labels:
    app.kubernetes.io/name: "otterscan"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "otterscan"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "otterscan"
    spec:
      containers:
        - image: otterscan
          name: otterscan
          volumeMounts:
            - name: config-vol
              subPath: config.json
              mountPath: /usr/share/nginx/html/config.json
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: config-vol
          configMap:
            name: config
