cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otterscan
  namespace: otterscan
  labels:
    app.kubernetes.io/name: otterscan
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: otterscan
